<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:viewBindingIgnore="false"
    tools:context=".EnefitsActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:paddingBottom="40dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@mipmap/ic_enefits"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/step_1"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/api_key"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtApiKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text=""
                    android:singleLine="true"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnInit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/theme_color"
                android:text="@string/btn_1"
                android:textAllCaps="false"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/step_2"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/theme_color"
                android:text="@string/btn_2"
                android:textAllCaps="false"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/step_3"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOffers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/theme_color"
                android:text="@string/btn_3"
                android:textAllCaps="false"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/step_4"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDisConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/theme_color"
                android:text="@string/btn_4"
                android:textAllCaps="false"
                android:visibility="visible" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/step_5"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnInitComplete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/theme_color"
                android:text="@string/btn_5"
                android:textAllCaps="false"
                android:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAccountConnected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/theme_color"
                android:text="@string/btn_6"
                android:textAllCaps="false"
                android:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConnectedAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/theme_color"
                android:text="@string/btn_7"
                android:textAllCaps="false"
                android:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnChainData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/theme_color"
                android:text="@string/btn_8"
                android:textAllCaps="false"
                android:visibility="visible" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>